--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -24,3 +24,5 @@ FILEIO_REPORTER: true
 
 # Uncomment if you want MegaLinter to detect errors but not block CI to pass
 # DISABLE_ERRORS: true
+
+BASH_EXEC_FILTER_REGEX_EXCLUDE: "^lib/"
