ci: set top-level permissions of GitHub Actions to `read-all`
https://www.checkov.io/5.Policy%20Index/github_actions.html

https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#permissions

https://docs.github.com/en/actions/using-jobs/assigning-permissions-to-jobs

--- a/.github/workflows/mega-linter.yml
+++ b/.github/workflows/mega-linter.yml
@@ -15,6 +15,12 @@ on:
       - main
       - master
 
+permissions:
+  issues: write
+  pull-requests: write
+  # For GitHub Comment Reporter
+  # https://megalinter.io/latest/reporters/GitHubCommentReporter/
+
 # Comment env block if you do not want to apply fixes
 env:
   # Apply linter fixes configuration
