--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,7 +74,7 @@ jobs:
           command: |
             brew update
             brew install gnu-tar
-            echo 'export PATH=/usr/local/opt/gnu-tar/libexec/gnubin:"$PATH"' >> "$BASH_ENV"
+            echo "export PATH=\"$(brew --prefix)/opt/gnu-tar/libexec/gnubin\":\"\$PATH\"" >> "$BASH_ENV"
             # https://circleci.com/docs/env-vars/#parameters-and-bash-environment
       - install_asdf
       - asdf_plugin_test
