--- a/.github/workflows/mega-linter.yml
+++ b/.github/workflows/mega-linter.yml
@@ -15,11 +15,7 @@ on:
       - main
       - master
 
-permissions:
-  issues: write
-  pull-requests: write
-  # For GitHub Comment Reporter
-  # https://megalinter.io/latest/reporters/GitHubCommentReporter/
+permissions: read-all
 
 # Comment env block if you do not want to apply fixes
 env:
@@ -49,9 +45,10 @@ jobs:
     # Give the default GITHUB_TOKEN write permission to commit and push, comment
     # issues, and post new Pull Requests; remove the ones you do not need
     permissions:
-      contents: write
       issues: write
       pull-requests: write
+      # For GitHub Comment Reporter
+      # https://megalinter.io/latest/reporters/GitHubCommentReporter/
 
     steps:
       # Git Checkout
